<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.td.phonegellary.PhotoManage">

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="105dp"
        android:layout_height="105dp"
        android:scaleType="fitXY"
        app:srcCompat="@android:drawable/sym_def_app_icon"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textConditionDisp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="105dp"
        android:layout_height="105dp"
        android:scaleType="fitXY"
        app:srcCompat="@android:drawable/sym_def_app_icon"
        app:layout_constraintLeft_toRightOf="@+id/imageView1"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textConditionDisp" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="105dp"
        android:layout_height="105dp"
        android:scaleType="fitXY"
        app:srcCompat="@android:drawable/sym_def_app_icon"
        app:layout_constraintLeft_toRightOf="@+id/imageView2"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textConditionDisp" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="105dp"
        android:layout_height="105dp"
        android:scaleType="fitXY"
        app:srcCompat="@android:drawable/sym_def_app_icon"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView1"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="105dp"
        android:layout_height="105dp"
        android:scaleType="fitXY"
        app:srcCompat="@android:drawable/sym_def_app_icon"
        app:layout_constraintLeft_toRightOf="@+id/imageView4"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="105dp"
        android:layout_height="105dp"
        android:scaleType="fitXY"
        app:srcCompat="@android:drawable/sym_def_app_icon"
        app:layout_constraintLeft_toRightOf="@+id/imageView5"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="105dp"
        android:layout_height="105dp"
        android:scaleType="fitXY"
        app:srcCompat="@android:drawable/sym_def_app_icon"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="105dp"
        android:layout_height="105dp"
        android:scaleType="fitXY"
        app:srcCompat="@android:drawable/sym_def_app_icon"
        app:layout_constraintLeft_toRightOf="@+id/imageView7"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="105dp"
        android:layout_height="105dp"
        android:scaleType="fitXY"
        app:srcCompat="@android:drawable/sym_def_app_icon"
        app:layout_constraintLeft_toRightOf="@+id/imageView8"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView6" />

    <Button
        android:id="@+id/btn_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Search"
        android:onClick="searchPic"
        app:layout_constraintLeft_toRightOf="@+id/textConditionDisp"
        android:layout_marginLeft="4dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp" />





    <EditText
        android:id="@+id/textConditionDisp"
        android:layout_width="258dp"
        android:layout_height="48dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp" />

    <Button
        android:id="@+id/btn_timePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="62dp"
        android:layout_marginLeft="256dp"
        android:text="Time"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/btn_addTag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Create Tag"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="5dp"
        app:layout_constraintLeft_toRightOf="@+id/editText3"
        android:layout_marginLeft="8dp"
        android:onClick="setTag"/>

    <EditText
        android:id="@+id/editText3"
        android:layout_width="217dp"
        android:layout_height="45dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginLeft="12dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="81dp"
        android:layout_marginTop="137dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/checkBox1" />

    <CheckBox
        android:id="@+id/checkBox4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="89dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="81dp"
        app:layout_constraintTop_toBottomOf="@+id/checkBox1" />

    <CheckBox
        android:id="@+id/checkBox5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="81dp"
        app:layout_constraintTop_toBottomOf="@+id/checkBox2"
        app:layout_constraintLeft_toRightOf="@+id/checkBox4"
        android:layout_marginLeft="81dp" />

    <CheckBox
        android:id="@+id/checkBox6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@+id/checkBox5"
        android:layout_marginLeft="81dp"
        android:layout_marginTop="81dp"
        app:layout_constraintTop_toBottomOf="@+id/checkBox3" />

    <CheckBox
        android:id="@+id/checkBox7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="81dp"
        app:layout_constraintTop_toBottomOf="@+id/checkBox4"
        android:layout_marginLeft="89dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <CheckBox
        android:id="@+id/checkBox8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@+id/checkBox7"
        android:layout_marginLeft="81dp"
        android:layout_marginTop="81dp"
        app:layout_constraintTop_toBottomOf="@+id/checkBox5" />

    <CheckBox
        android:id="@+id/checkBox9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="81dp"
        app:layout_constraintTop_toBottomOf="@+id/checkBox6"
        app:layout_constraintLeft_toRightOf="@+id/checkBox8"
        android:layout_marginLeft="81dp" />

    <CheckBox
        android:id="@+id/checkBox3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="81dp"
        android:layout_marginTop="137dp"
        app:layout_constraintLeft_toRightOf="@+id/checkBox2"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/checkBox1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="89dp"
        android:layout_marginTop="137dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>
