...
        android:visibility="invisible"
        app:layout_constraintLeft_toRightOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/spinner"
        app:srcCompat="@android:drawable/sym_def_app_icon" />

    <Button
        android:id="@+id/btn_PhotoM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:onClick="to_PhotoM"
        android:text="Photo Manage"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_editor_absoluteY="5dp" />

    <Button
        android:id="@+id/btn_Camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:text="Camera"
        app:layout_constraintLeft_toRightOf="@+id/btn_PhotoM"
        tools:layout_editor_absoluteY="5dp" />
...
